update: all admins data
