# config/swagger.json
@@ -154,7 +154,8 @@
                   "type": "string"
                 },
                 "dateOfBirth": {
-                  "type": "date"
+                  "type": "string",
+                  "format": "date"
                 },
                 "address": {
                   "type": "string"
@@ -275,35 +276,6 @@
         ]
       }
     },
-    "/api/admins/register": {
-      "post": {
-        "summary": "Register",
-        "description": "Create new Admin",
-        "operationId": "register",
-        "responses": {
-          "201": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/coreRegisterResponseAdmin"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response."
-          }
-        },
-        "parameters": [{
-          "name": "body",
-          "in": "body",
-          "required": true,
-          "schema": {
-            "$ref": "#/definitions/coreRegisterRequestAdmin"
-          }
-        }],
-        "tags": [
-          "Admin"
-        ]
-      }
-    },
     "/api/admins/who-am-i": {
       "get": {
         "summary": "Who Am I",
@@ -326,63 +298,6 @@
             }
           }
         },
-        "tags": [
-          "Admin"
-        ]
-      }
-    },
-    "/api/admins/{id}/detail": {
-      "put": {
-        "summary": "Update",
-        "description": "Change Admin information",
-        "operationId": "updateUser",
-        "security": [{
-          "BearerTokenAuth": []
-        }],
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/coreAdmin"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [{
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "integer",
-            "format": "int64"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "type": "string"
-                },
-                "image": {
-                  "type": "string"
-                },
-                "phoneNumber": {
-                  "type": "string"
-                },
-                "gender": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        ],
         "tags": [
           "Admin"
         ]
@@ -585,7 +500,8 @@
           "type": "string"
         },
         "dateOfBirth": {
-          "type": "string"
+          "type": "string",
+          "format": "date"
         },
         "address": {
           "type": "string"
@@ -644,7 +560,8 @@
           "type": "string"
         },
         "dateOfBirth": {
-          "type": "string"
+          "type": "string",
+          "format": "date"
         },
         "address": {
           "type": "string"
@@ -674,7 +591,8 @@
           "type": "string"
         },
         "dateOfBirth": {
-          "type": "string"
+          "type": "string",
+          "format": "date"
         },
         "address": {
           "type": "string"
@@ -712,7 +630,8 @@
           "type": "string"
         },
         "dateOfBirth": {
-          "type": "string"
+          "type": "string",
+          "format": "date"
         },
         "address": {
           "type": "string"
@@ -721,55 +640,6 @@
           "type": "string"
         },
         "NIK": {
-          "type": "string"
-        },
-        "phoneNumber": {
-          "type": "string"
-        },
-        "createdAt": {
-          "type": "string",
-          "format": "date-time"
-        },
-        "updatedAt": {
-          "type": "string",
-          "format": "date-time"
-        }
-      }
-    },
-    "coreRegisterRequestAdmin": {
-      "type": "object",
-      "properties": {
-        "name": {
-          "type": "string"
-        },
-        "email": {
-          "type": "string"
-        },
-        "password": {
-          "type": "string"
-        },
-        "phoneNumber": {
-          "type": "string"
-        },
-        "gender": {
-          "type": "string"
-        }
-      }
-    },
-    "coreRegisterResponseAdmin": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "integer",
-          "format": "int64"
-        },
-        "name": {
-          "type": "string"
-        },
-        "email": {
-          "type": "string"
-        },
-        "gender": {
           "type": "string"
         },
         "phoneNumber": {
